Correction contrast text& link page index

--- a/New-projet4/style.css
+++ b/New-projet4/style.css
@@ -739,6 +739,10 @@ h4 {
     color: #FFFFFF!important;
 }
 
+.greydark {
+    color: #212121!important;
+}
+
 .portfolio-thumb {
     margin-bottom: 24px;
 }
@@ -775,17 +779,17 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #F9DBCD!important;
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #424242!important;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #FFFFFF!important;
+    color: #242424!important;
 }
 
 .ltc-white {
@@ -1039,4 +1043,8 @@ h4 {
     .bloc-mob-center-text {
         text-align: center;
     }
+}
+
+.partners ul li a{
+    color: #212121!important;
 }
